--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -33,7 +33,7 @@ Amendments to the Canadian *Fisheries Act* (2019) include new Fish Stocks provis
 Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is expected to occur to the stock. Serious harm can result from over-fishing, other human induced mortality, or changes in population dynamics [@dfoHarvestStrategyCompliant2006]. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009]. Serious harm to stocks is generally described in terms of impaired productivity due to changes in recruitment, growth, maturation and survival [@dfoProceedingsNationalPeer2016a], where resulting declines are irreversible or slow to be reversed [@kronlundSelectionRoleLimit2018]. Serious harm can occur due to depensatory mortality (or Allee effects) that occur because of, for example, increased predation rates or inability to find mates at very low abundances [@chenIncorporatingAlleeEffects2002]. Serious harm can also be associated with loss of resilience [@smithTechnicalGuidelinesProvision2012] and the inability to recover from perturbations [@dfoFisheryDecisionMakingFramework2009] due changes in stock structure or losses of phenotypic and genotypic diversity.
 Because population dynamics are not well understood at low population sizes [@dfoHarvestStrategyCompliant2006] and Allee effects are only infrequently observed in marine fish species [@keithPopulationDynamicsMarine2012, but see @chenIncorporatingAlleeEffects2002 and @cunninghamSizeSelectivityPredation2013], a biological basis for serious harm is often difficult to identify and quantify. 
 
-The definition of serious harm from @dfoFisheryDecisionMakingFramework2009 indicates that LRPs should be *above* the level where serious harm occurs, not at the level where it is occurring, and that long-term loss of fishing opportunities may occur below that level.  Defining the level before serious harm occurs to a species or ecosystem is a pervasive challenge as harm is often not identified until it is already occurring [@hilbornQuantitativeFisheriesStock1986]. Also, this definition of serious harm includes possible impacts on other ecosystem components, which are often challenging to identify because of limited data and poor understanding of ecosystem linkages and dynamics [but see @chagarisEcologicalReferencePoints2020].
+The definition of serious harm from @dfoFisheryDecisionMakingFramework2009 indicates that LRPs should be *above* the level where serious harm is expected to occur, not at the level where it is occurring, and that long-term losses of fishing opportunities may occur below that level.  Defining the level before serious harm occurs to a species or ecosystem is a pervasive challenge as harm is often not identified until it is already occurring [@hilbornQuantitativeFisheriesStock1986]. Also, this definition of serious harm includes possible impacts on other ecosystem components, which are often challenging to identify because of limited data and poor understanding of ecosystem linkages and dynamics [but see @chagarisEcologicalReferencePoints2020].
  
  <!--Marentette's description of serious harm (CH included in above revised text)
  "In the context of fisheries, serious harm can be interpreted as any undesirable changes to the biological attributes of the stock that make growth to target1 levels cease to be considered rapid and secure,1 and would thus encompass stock states before extinction is a concern.2,3 These changes can be associated with:
@@ -136,7 +136,7 @@ This work was supported by a technical working group composed of DFO and First N
 
 While candidate LRPs were evaluated to an extent through sensitivity analyses and retrospective analyses, a more rigorous closed-loop simulation evaluation of candidate LRPs was beyond the scope of both working papers, and is recommended as a next step. Also, our applications of LRP methods to case studies are for illustrative purposes only, and are not meant to be formal estimation of LRPs for those SMUs. Furthermore, additional LRPs could be developed in the future, aligned with the key principles outlined here (Section \@ref(principles)).
 
-Time-varying population processes, such as changes in productivity, have important impacts on biological benchmark, LRPs, and assessment against LRPs. While we describe some recent approaches for considering those impacts in Section \@ref(recommendations), a comprehensive review and evaluation of the impacts of time-varying parameters on LRPs is beyond the scope of this study. This theme is an important area for future research.
+Time-varying population processes, such as changes in productivity, have important impacts on biological benchmarks, LRPs, and assessment against LRPs. While we describe some recent approaches for considering those impacts in Section \@ref(recommendations), a comprehensive review and evaluation of the impacts of time-varying parameters on LRPs is beyond the scope of this study. This theme is an important area for future research.
 
 Here, we follow recommendations of @withlerGeneticallyBasedTargets2018 on the biological assessments of hatchery-influenced populations under the WSP, as described in Section \@ref(est-methods). Following recent WSP assessments, we also removed the demographic influence of hatchery production from time-series of abundances when data on the proportion of hatchery- vs. natural-origin fish on the spawning grounds were available. A review of methods for estimating proportion of hatchery-origin spawners or accounting for them in biological assessments was beyond the scope of this study.
 
