--- a/guidelinesWP/01.5-reviewRPs.Rmd
+++ b/guidelinesWP/01.5-reviewRPs.Rmd
@@ -54,7 +54,7 @@ In some cases, single-metric approaches in which spawner abundances are compared
 \end{itemize}
 \end{tcolorbox}
 
-For marine fish stocks in Canada, LRPs have several roles including triggering rebuilding plans under DFO's Precautionary Approach Framework @dfoFisheryDecisionMakingFramework2009 and the *Fisheries Act*, communicating conservation risks to decision makers and the public, and informing management decisions about fisheries. For example, LRPs can be used as part of measurable objectives to inform operational control points which are points where management actions are triggered within harvest control rules, and can also be applied as operational control points themselves. Within a harvest control rule, a conservation goal might be to avoid low biomass levels where serious harm is occurring which can be translated to a measurable objective to avoid spawner abundances lower than an LRP with a high probability (e.g., 95%) over a specified time period.  However, there can be several operational control points in the harvest control rule and these can be positioned to achieve a suite of biological and socioeconomic objectives beyond those associated with serious harm as defined by an LRP, usually by a diverse range of managers and stakeholders. In contrast, DFO's Science Sector is responsible for identifying LRPs based only on biological considerations [@dfoScienceAdvicePrecautionary2021].<!--SUe suggested omitting these last 4  sentences, but I think this is relevant for aggregate abundance LRPs-->
+For marine fish stocks in Canada, LRPs have several roles including triggering rebuilding plans under DFO's Precautionary Approach Framework @dfoFisheryDecisionMakingFramework2009 and the *Fisheries Act*, communicating conservation risks to decision makers and the public, and informing management decisions about fisheries. For example, LRPs can be used as part of measurable objectives and can also be applied as operational control points to inform operational control points which are points where management actions are triggered within harvest control rules. A conservation goal might be to avoid low biomass levels where serious harm is expected to occur which can be translated to a measurable objective to avoid spawner abundances lower than an LRP with a high probability (e.g., 95%) over a specified time period.  This objective can then inform the placement of operational control points within the harvest control rule. However, there can be several operational control points in the harvest control rule and these can be positioned to achieve a suite of biological and socioeconomic objectives beyond those associated with serious harm as defined by an LRP, usually by a diverse range of managers, First Nations, and stakeholders. In contrast, DFO's Science Sector is responsible for identifying LRPs based only on biological considerations [@dfoScienceAdvicePrecautionary2021].<!--SUe suggested omitting these last 4  sentences, but I think this is relevant for aggregate abundance LRPs-->
 
 
 In addition, LRPs can be used in performance metrics within a Management Procedure Framework (or Management Strategy Evaluation) to identify candidate procedures that achieve conservation objectives (e.g., 95% probability of staying above a LRP over a specified period) among other objectives<!--, without being explicitly estimated--> [@dfoManagementProcedureFramework2021]. This approach explicitly accounts for a range of uncertainties in the biology of the stock, dynamics of the fleet, observations of abundances and ages at return, and the implementation of management decisions. Simulation evaluation of management procedures is widely viewed as a best practice for informing management decisions under uncertainty [@puntEssentialFeaturesNextgeneration2020]. For fisheries in which management procedures have been simulation tested, assessment of stock status relative to an LRP is not necessary so long as the management procedure selected has been demonstrated to meet conservation (and possibly other) objectives over a range of uncertainties (i.e., modelled scenarios) about stock and fishery dynamics. 
