--- a/guidelinesWP/06.5-Acknowledgements.Rmd
+++ b/guidelinesWP/06.5-Acknowledgements.Rmd
@@ -1,8 +1,42 @@
 # ACKNOWLEDGEMENTS
 
-We gratefully acknowledge the considerable support provided by our Technical Working Group on Salmon LRPs over the 3 years leading up to this review (alphabetical order by last name): ...
+We gratefully acknowledge the considerable support provided by our Technical Working Group on Salmon LRPs over the 3 years leading up to this review (alphabetical order by last name): Michael Arbeider, Jessy Bokvist, Nicholas Brown, Charmaine Carr-Harris, Kelsey Campbell, Steve Cox-Rogers, Sabrina Crowley, Shaun Davies, Brooke Davis, Diana Dobson, Michael Folkes Aaron Foos, Nicole Frederickson, Wilf Luedke, Diana McHugh, Pete Nicklin, Chuck Parken, Candace Picco, Mike Staley, Pieter Van Will, Antonio Velez-Espino, and Ryan Whitmore.
 
-We especially thank the contributions of our First Nations members of the Technical Working Group who brought unique perspectives and
-insights into our discussions.
+We especially thank the contributions of our First Nations members of the Technical Working Group who brought unique perspectives and insights into our discussions.
 
-We also thank Julie Marentette, Tim Barrett, Mary Thiess, Danny Ings, and Jason Ladell, from National Headquarters for their valuable input during the development of ideas in this paper, and review of preliminary drafts.
+In addition, Brooke Davis provided invaluable help developing early code for the integrated logistic regression model, for which we are extremely grateful.
+
+We also thank Julie Marentette, Tim Barrett, Mary Thiess,  Jason Ladell, Danny Ings for their perspectives on LRPs nationally and as applied to other taxonomic groups.  Julie Marentette, Tim Barrett, and Mary Thiess also provided helpful comments on an earlier draft.
+
+<!-- I've removed authors from the acknowledgement list: Full list of members:
+Michael Arbeider,
+Jessy Bokvist,
+Nicholas Brown,
+Charmaine Carr-Harris,
+Kelsey Campbell,
+Brendan Connors,
+Steve Cox-Rogers,
+Sabrina Crowley,
+Shaun Davies,
+Brooke Davis,
+Diana Dobson,
+Michael Folkes
+Aaron Foos,
+Nicole Frederickson,
+Sue Grant,
+Carrie Holt,
+Kendra Holt,
+Wilf Luedke,
+Ann-Marie Huang,
+Diana McHugh,
+Pete Nicklin,
+Chuck Parken,
+Candace Picco,
+Mike Staley,
+Pieter Van Will,
+Antonio Velez-Espino,
+Luke Warkentin,
+Ryan Whitmore,
+Catarina Wor,
+-->
+
