--- a/guidelinesWP/10-appendixCaseStudies.Rmd
+++ b/guidelinesWP/10-appendixCaseStudies.Rmd
@@ -8,7 +8,7 @@ After that, all subsequent sections will be turned into appendices. -->
 # CASE STUDIES {#app:case-studies}
 
 
-We illustrate the application of the candidate methods for LRPs developed in Section \@ref(est-methods) to three SMUs as case studies, evaluate sensitivity of LRPs to various assumptions, and use these applications to inform the guidelines presented in Section \@ref(guidelines). The case studies included Interior Fraser River Coho Salmon, West Coast Vancouver Island (WCVI) Chinook Salmon, and Inner South Coast Chum Salmon  (excluding Fraser River CUs), each comprised of 3-7 component CUs. These SMUs were chosen because they spanned a wide range of data types and availabilities from data-rich (Interior Fraser River Coho) to data-limited (Inner South Coast Chum). Furthermore, they varied in hatchery contributions from high (WCVI Chinook) to relatively low (Interior Fraser River Coho and Inside South Coast Chum), and two of these case studies are included in the proposed first batch of stocks to be put under regulation for the Fish Stocks provisions (Interior Fraser River Coho and WCVI Chinook). For each case study, the set of LRP methods considered is a function of available data and previously developed assessment methods for component CUs. In this section, we provide a brief description of each case study and methods applied to each. For more complete descriptions of case studies, including SMU characteristics, data sources, analysis methods, and results, see Holt et al. (in review). <!--An overview of the approaches applied are provided in Table \@ref(tab:lrpapproaches). -->
+We illustrate the application of the candidate methods for LRPs developed in Section \@ref(est-methods) to three SMUs as case studies, evaluate sensitivity of LRPs to various assumptions, and use these applications to inform the guidelines presented in Section \@ref(guidelines). The case studies included Interior Fraser River Coho Salmon, West Coast Vancouver Island (WCVI) Chinook Salmon, and Inside South Coast Chum Salmon  (excluding Fraser River CUs), each comprised of 3-7 component CUs. These SMUs were chosen because they spanned a wide range of data types and availabilities from data-rich (Interior Fraser River Coho) to data-limited (Inside South Coast Chum). Furthermore, they varied in hatchery contributions from high (WCVI Chinook) to relatively low (Interior Fraser River Coho and Inside South Coast Chum), and two of these case studies are included in the proposed first batch of stocks to be put under regulation for the Fish Stocks provisions (Interior Fraser River Coho and WCVI Chinook). For each case study, the set of LRP methods considered is a function of available data and previously developed assessment methods for component CUs. In this section, we provide a brief description of each case study and methods applied to each. For more complete descriptions of case studies, including SMU characteristics, data sources, analysis methods, and results, see Holt et al. (in review). <!--An overview of the approaches applied are provided in Table \@ref(tab:lrpapproaches). -->
 
 <!--CH Kendra to use in CS WP intead of here:
 
